--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -31,21 +31,15 @@
 
          Must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLevels">
-        <item>15</item>
-        <item>18</item>
-        <item>23</item>
-        <item>31</item>
-        <item>81</item>
-        <item>121</item>
-        <item>226</item>
-        <item>321</item>
-        <item>551</item>
-        <item>801</item>
-        <item>1251</item>
-        <item>2001</item>
-        <item>3001</item>
-        <item>5001</item>
-        <item>10000</item>
+        <item>20</item>
+        <item>100</item>
+        <item>200</item>
+        <item>500</item>
+        <item>800</item>
+        <item>1000</item>
+        <item>1200</item>
+        <item>1800</item>
+        <item>2500</item>
     </integer-array>
 
     <!-- Array of output values for LCD backlight corresponding to the LUX values
@@ -54,22 +48,33 @@
          This must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLcdBacklightValues">
         <item>8</item>
-        <item>8</item>
-        <item>8</item>
-        <item>8</item>
-        <item>40</item>
-        <item>40</item>
-        <item>40</item>
-        <item>40</item>
-        <item>40</item>
-        <item>40</item>
-        <item>40</item>
-        <item>190</item>
-        <item>190</item>
-        <item>190</item>
-        <item>190</item>
-        <item>190</item>
+        <item>20</item>
+        <item>50</item>
+        <item>90</item>
+        <item>100</item>
+        <item>110</item>
+        <item>140</item>
+        <item>180</item>
+        <item>220</item>
+        <item>255</item>
     </integer-array>
+
+    <!-- Minimum screen brightness setting allowed by the power manager.
+         The user is forbidden from setting the brightness below this level. -->
+    <integer name="config_screenBrightnessSettingMinimum">4</integer>
+
+    <!-- Maximum screen brightness allowed by the power manager.
+         The user is forbidden from setting the brightness above this level. -->
+    <integer name="config_screenBrightnessSettingMaximum">255</integer>
+
+    <!-- Default screen brightness setting.
+         Must be in the range specified by minimum and maximum. -->
+    <integer name="config_screenBrightnessSettingDefault">128</integer>
+
+    <!-- Screen brightness used to dim the screen when the user activity
+         timeout expires.  May be less than the minimum allowed brightness setting
+         that can be set by the user. -->
+    <integer name="config_screenBrightnessDim">4</integer>
 
     <!-- Array of output values for button backlight corresponding to the LUX values
          in the config_autoBrightnessLevels array.  This array should have size one greater
