--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -31,20 +31,14 @@
 
          Must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLevels">
-        <item>15</item>
-        <item>18</item>
-        <item>23</item>
-        <item>31</item>
-        <item>81</item>
-        <item>121</item>
-        <item>226</item>
-        <item>321</item>
-        <item>551</item>
-        <item>801</item>
-        <item>1251</item>
-        <item>2001</item>
-        <item>3001</item>
-        <item>5001</item>
+        <item>1</item>
+        <item>8</item>
+        <item>40</item>
+        <item>350</item>
+        <item>600</item>
+        <item>1000</item>
+        <item>1600</item>
+        <item>3000</item>
         <item>10000</item>
     </integer-array>
 
@@ -53,23 +47,30 @@
          than the size of the config_autoBrightnessLevels array.
          This must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLcdBacklightValues">
-        <item>8</item>
-        <item>8</item>
-        <item>8</item>
-        <item>8</item>
-        <item>40</item>
-        <item>40</item>
-        <item>40</item>
-        <item>40</item>
-        <item>40</item>
-        <item>40</item>
-        <item>40</item>
-        <item>190</item>
-        <item>190</item>
-        <item>190</item>
-        <item>190</item>
-        <item>190</item>
+        <item>13</item>
+        <item>26</item>
+        <item>55</item>
+        <item>88</item>
+        <item>130</item>
+        <item>167</item>
+        <item>204</item>
+        <item>240</item>
+        <item>254</item>
+        <item>255</item>
     </integer-array>
+
+    <!-- Minimum screen brightness setting allowed by the power manager.
+         The user is forbidden from setting the brightness below this level. -->
+    <integer name="config_screenBrightnessSettingMinimum">1</integer>
+
+    <!-- Default screen brightness setting.
+         Must be in the range specified by minimum and maximum. -->
+    <integer name="config_screenBrightnessSettingDefault">78</integer>
+
+    <!-- Screen brightness used to dim the screen when the user activity
+         timeout expires.  May be less than the minimum allowed brightness setting
+         that can be set by the user. -->
+    <integer name="config_screenBrightnessDim">5</integer>
 
     <!-- Array of output values for button backlight corresponding to the LUX values
          in the config_autoBrightnessLevels array.  This array should have size one greater
