kenzo:Fix buttons illumination
* Make hardware-keys backlight adjustable
* Set default backlight brightness to 60%

Change-Id: I160bd3b3b17d24ce8e430bc4b29478843ced1da7
Signed-off-by: Warmachine28 <ideologuejyotirmay@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -359,4 +359,8 @@
     <!-- enable doze powersaving mode -->
     <bool name="config_enableAutoPowerModes">true</bool>
 
+    <!-- Button illumination -->
+    <bool name="config_deviceHasVariableButtonBrightness">true</bool>
+    <integer name="config_buttonBrightnessSettingDefault">153</integer>
+
 </resources>
