kenzo: enable VoLTE support
Change-Id: Iade252b7db3f8b2a55edeb964ed1255b87b91cf9

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -197,6 +197,9 @@
         <item>ethernet,9,9,4,-1,true</item>
     </string-array>
 
+    <!-- Flag specifying whether VoLTE is available on device -->
+    <bool name="config_device_volte_available">true</bool>
+
     <!-- This string array should be overridden by the device to present a list of radio
          attributes.  This is used by the connectivity manager to decide which networks can coexist
          based on the hardware -->
